Config GUI prototype

--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -503,5 +503,14 @@
 	
 	"item.betternether.cincinnasite_hoe": "Cincinnasite Hoe",
 	"item.betternether.cincinnasite_hoe_diamond": "Cincinnasite-Diamond Hoe",
-	"item.betternether.nether_ruby_hoe": "Nether Ruby Hoe"
+	"item.betternether.nether_ruby_hoe": "Nether Ruby Hoe",
+	
+	"config.betternether.config": "Better Nether Config",
+	"config.betternether.mod_reload": "§b§lYou need to restart Minecraft to apply this changes!",
+	"config.betternether.rendering": "Render Options",
+	"config.betternether.blocks": "Registered Blocks",
+	"config.betternether.items": "Registered Items",
+	
+	"config.betternether.reset": "Reset",
+	"config.betternether.fog": "Fog Distance"
 }
