--- a/src/main/resources/assets/betternether/lang/zh_cn.json
+++ b/src/main/resources/assets/betternether/lang/zh_cn.json
@@ -22,7 +22,7 @@
 	"item.betternether.cincinnasite_pickaxe": "云金镐",
 	"item.betternether.cincinnasite_pickaxe_diamond": "钻石云金斧镐",
 
-	"item.betternether.stalagnate_bowl": "石结碗",
+	"item.betternether.stalagnate_bowl": "石结木碗",
 	"item.betternether.stalagnate_bowl_apple": "黑苹果煲",
 	"item.betternether.stalagnate_bowl_mushroom": "蘑菇煲",
 	"item.betternether.stalagnate_bowl_wart": "下界疣汤",
@@ -89,7 +89,7 @@
 	"block.betternether.ink_bush": "墨丛",
 	"block.betternether.ink_bush_seed": "墨丛种子",
 
-	"block.betternether.lucis_spore": "光芝孢子",
+	"block.betternether.lucis_spore": "灯芝孢子",
 
 	"block.betternether.magma_flower": "岩浆花种子",
 
@@ -103,7 +103,7 @@
 	"block.betternether.nether_mycelium": "下界菌丝",
 	"block.betternether.nether_reed": "下界芦苇",
 	"block.betternether.netherrack_furnace": "下界岩熔炉",
-	"block.betternether.netherrack_moss": "下界苔藓",
+	"block.betternether.netherrack_moss": "下界岩苔藓",
 
 	"block.betternether.orange_mushroom": "枳菇",
 
@@ -216,7 +216,7 @@
 	"block.betternether.black_vine": "黑藤",
 	"block.betternether.veined_sand": "脉沙",
 	"block.betternether.soul_vein": "灵魂叶脉",
-	"block.betternether.blooming_vine": "盛花藤蔓",
+	"block.betternether.blooming_vine": "花藤",
 	"block.betternether.golden_vine": "金藤",
 	"block.betternether.geyser": "下界间歇泉",
 	
@@ -295,35 +295,35 @@
 	"block.betternether.roof_tile_reeds": "下界芦苇瓦片",
 	"block.betternether.roof_tile_reeds_stairs": "下界芦苇瓦片楼梯",
 	"block.betternether.roof_tile_reeds_slab": "下界芦苇瓦片台阶",
-	"block.betternether.roof_tile_stalagnate": "石结瓦片",
-	"block.betternether.roof_tile_stalagnate_stairs": "石结瓦片楼梯",
-	"block.betternether.roof_tile_stalagnate_slab": "石结瓦片台阶",
+	"block.betternether.roof_tile_stalagnate": "石结木瓦片",
+	"block.betternether.roof_tile_stalagnate_stairs": "石结木瓦片楼梯",
+	"block.betternether.roof_tile_stalagnate_slab": "石结木瓦片台阶",
 	"block.betternether.roof_tile_nether_bricks": "下界砖瓦片",
 	"block.betternether.roof_tile_nether_bricks_stairs": "下界砖瓦片楼梯",
 	"block.betternether.roof_tile_nether_bricks_slab": "下界砖瓦片台阶",
 	"block.betternether.roof_tile_cincinnasite": "云金瓦片",
 	"block.betternether.roof_tile_cincinnasite_stairs": "云金瓦片楼梯",
 	"block.betternether.roof_tile_cincinnasite_slab": "云金瓦片台阶",
-	"block.betternether.roof_tile_willow": "绯柳瓦片",
-	"block.betternether.roof_tile_willow_stairs": "绯柳瓦片楼梯",
-	"block.betternether.roof_tile_willow_slab": "绯柳瓦片台阶",
+	"block.betternether.roof_tile_willow": "绯柳木瓦片",
+	"block.betternether.roof_tile_willow_stairs": "绯柳木瓦片楼梯",
+	"block.betternether.roof_tile_willow_slab": "绯柳木瓦片台阶",
 	"block.betternether.roof_tile_wart": "巨疣瓦片",
 	"block.betternether.roof_tile_wart_stairs": "巨疣瓦片楼梯",
 	"block.betternether.roof_tile_wart_slab": "巨疣瓦片台阶",
 	
 	"block.betternether.taburet_reeds": "下界芦苇凳子",
-	"block.betternether.taburet_stalagnate": "石结凳子",
-	"block.betternether.taburet_willow": "绯柳凳子",
+	"block.betternether.taburet_stalagnate": "石结木凳子",
+	"block.betternether.taburet_willow": "绯柳木凳子",
 	"block.betternether.taburet_wart": "巨疣凳子",
 	"block.betternether.taburet_cincinnasite": "云金凳子",
 	
-	"block.betternether.stalagnate_ladder": "石结梯子",
-	"block.betternether.willow_ladder": "绯柳梯子",
+	"block.betternether.stalagnate_ladder": "石结木梯子",
+	"block.betternether.willow_ladder": "绯柳木梯子",
 	"block.betternether.wart_ladder": "巨疣梯子",
 	
 	"block.betternether.chair_reeds": "下界芦苇椅子",
-	"block.betternether.chair_stalagnate": "石结椅子",
-	"block.betternether.chair_willow": "绯柳椅子",
+	"block.betternether.chair_stalagnate": "石结木椅子",
+	"block.betternether.chair_willow": "绯柳木椅子",
 	"block.betternether.chair_wart": "巨疣椅子",
 	"block.betternether.chair_cincinnasite": "云金椅子",
 	
@@ -339,30 +339,30 @@
 	"block.betternether.giant_mold_sapling": "巨冠霉苗",
 	
 	"block.betternether.bar_stool_reeds": "下界芦苇吧台凳",
-	"block.betternether.bar_stool_stalagnate": "石结吧台凳",
-	"block.betternether.bar_stool_willow": "绯柳吧台凳",
+	"block.betternether.bar_stool_stalagnate": "石结木吧台凳",
+	"block.betternether.bar_stool_willow": "绯柳木吧台凳",
 	"block.betternether.bar_stool_wart": "巨疣吧台凳",
 	"block.betternether.bar_stool_cincinnasite": "云金吧台凳",
 	
-	"biome.betternether.gravel_desert": "砂砾荒漠",
-	"biome.betternether.nether_jungle": "下界丛林",
-	"biome.betternether.wart_forest": "巨疣森林",
-	"biome.betternether.nether_grasslands": "下界草原",
-	"biome.betternether.nether_mushroom_forest": "下界蘑菇森林",
-	"biome.betternether.nether_mushroom_forest_edge": "下界蘑菇森林边缘",
-	"biome.betternether.wart_forest_edge": "巨疣森林边缘",
-	"biome.betternether.bone_reef": "骨礁",
-	"biome.betternether.poor_grasslands": "贫瘠草原",
-	"biome.betternether.nether_swampland": "下界沼泽",
-	"biome.betternether.nether_swampland_terraces": "下界沼泽梯田",
-	"biome.betternether.magma_land": "岩浆地",
-	"biome.betternether.soul_plain": "灵魂平原",
-	"biome.betternether.crimson_glowing_woods": "绯光林",
-	"biome.betternether.old_warped_woods": "古木林",
-	"biome.betternether.crimson_pinewood": "红松林",
-	"biome.betternether.old_fungiwoods": "古菌林",
-	"biome.betternether.poor_nether_grasslands": "贫瘠下界草原",
-	"biome.betternether.flooded_deltas": "被淹没的三角洲",
+	"biome.betternether.gravel_desert": "[更好的下界] 沙砾荒漠",
+	"biome.betternether.nether_jungle": "[更好的下界] 下界丛林",
+	"biome.betternether.wart_forest": "[更好的下界] 巨疣森林",
+	"biome.betternether.nether_grasslands": "[更好的下界] 下界草原",
+	"biome.betternether.nether_mushroom_forest": "[更好的下界] 下界蘑菇森林",
+	"biome.betternether.nether_mushroom_forest_edge": "[更好的下界] 下界蘑菇森林边缘",
+	"biome.betternether.wart_forest_edge": "[更好的下界] 巨疣森林边缘",
+	"biome.betternether.bone_reef": "[更好的下界] 骨礁",
+	"biome.betternether.poor_grasslands": "[更好的下界] 贫瘠草原",
+	"biome.betternether.nether_swampland": "[更好的下界] 下界沼泽",
+	"biome.betternether.nether_swampland_terraces": "[更好的下界] 下界沼泽梯田",
+	"biome.betternether.magma_land": "[更好的下界] 岩浆地",
+	"biome.betternether.soul_plain": "[更好的下界] 灵魂平原",
+	"biome.betternether.crimson_glowing_woods": "[更好的下界] 绯光林",
+	"biome.betternether.old_warped_woods": "[更好的下界] 古诡异菌林",
+	"biome.betternether.crimson_pinewood": "[更好的下界] 绯红菌松林",
+	"biome.betternether.old_fungiwoods": "[更好的下界] 古菌林",
+	"biome.betternether.poor_nether_grasslands": "[更好的下界] 贫瘠下界草原",
+	"biome.betternether.flooded_deltas": "[更好的下界] 被淹没的三角洲",
 	
 	"block.betternether.mushroom_fir": "冷杉菇",
 	"block.betternether.mushroom_fir_sapling": "冷杉菇苗",
@@ -408,18 +408,18 @@
 	"block.betternether.taburet_oak": "橡木凳子",
 	"block.betternether.chair_oak": "橡木椅子",
 	"block.betternether.bar_stool_oak": "橡木吧台凳",
-	"block.betternether.taburet_spruce": "云杉凳子",
-	"block.betternether.chair_spruce": "云杉椅子",
-	"block.betternether.bar_stool_spruce": "云杉吧台凳",
-	"block.betternether.taburet_birch": "白桦凳子",
-	"block.betternether.chair_birch": "白桦椅子",
-	"block.betternether.bar_stool_birch": "白桦吧台凳",
-	"block.betternether.taburet_jungle": "丛林凳子",
-	"block.betternether.chair_jungle": "丛林椅子",
-	"block.betternether.bar_stool_jungle": "丛林吧台凳",
-	"block.betternether.taburet_acacia": "金合欢凳子",
-	"block.betternether.chair_acacia": "金合欢椅子",
-	"block.betternether.bar_stool_acacia": "金合欢吧台凳",
+	"block.betternether.taburet_spruce": "云杉木凳子",
+	"block.betternether.chair_spruce": "云杉木椅子",
+	"block.betternether.bar_stool_spruce": "云杉木吧台凳",
+	"block.betternether.taburet_birch": "白桦木凳子",
+	"block.betternether.chair_birch": "白桦木椅子",
+	"block.betternether.bar_stool_birch": "白桦木吧台凳",
+	"block.betternether.taburet_jungle": "丛林木凳子",
+	"block.betternether.chair_jungle": "丛林木椅子",
+	"block.betternether.bar_stool_jungle": "丛林木吧台凳",
+	"block.betternether.taburet_acacia": "金合欢木凳子",
+	"block.betternether.chair_acacia": "金合欢木椅子",
+	"block.betternether.bar_stool_acacia": "金合欢木吧台凳",
 	"block.betternether.taburet_dark_oak": "深色橡木凳子",
 	"block.betternether.chair_dark_oak": "深色橡木椅子",
 	"block.betternether.bar_stool_dark_oak": "深色橡木吧台凳",
@@ -434,26 +434,26 @@
 	"item.betternether.spawn_egg_hydrogen_jellyfish": "氢气水母刷怪蛋",
 	"block.betternether.brick_pot": "下界砖花盆",
 	
-	"block.betternether.striped_log_rubeus": "去皮铬瘤原木",
-	"block.betternether.striped_bark_rubeus": "去皮铬瘤木",
-	"block.betternether.rubeus_cone": "铬瘤果",
-	"block.betternether.rubeus_sapling": "铬瘤树苗",
-	"block.betternether.rubeus_log": "铬瘤原木",
-	"block.betternether.rubeus_bark": "铬瘤木",
-	"block.betternether.rubeus_leaves": "铬瘤树叶",
-	"block.betternether.rubeus_planks": "铬瘤木板",
-	"block.betternether.rubeus_stairs": "铬瘤木楼梯",
-	"block.betternether.rubeus_slab": "铬瘤木台阶",
-	"block.betternether.rubeus_fence": "铬瘤木栏杆",
-	"block.betternether.rubeus_gate": "铬瘤栅木拦门",
-	"block.betternether.rubeus_button": "铬瘤木按钮",
-	"block.betternether.rubeus_plate": "铬瘤木压力板",
-	"block.betternether.rubeus_trapdoor": "铬瘤木活板门",
-	"block.betternether.rubeus_door": "铬瘤木门",
-	"block.betternether.taburet_rubeus": "铬瘤木凳子",
-	"block.betternether.chair_rubeus": "铬瘤木椅子",
-	"block.betternether.bar_stool_rubeus": "铬瘤木吧台凳",
-	"block.betternether.rubeus_ladder": "铬瘤木梯子",
+	"block.betternether.striped_log_rubeus": "去皮宝红原木",
+	"block.betternether.striped_bark_rubeus": "去皮宝红木",
+	"block.betternether.rubeus_cone": "宝红果",
+	"block.betternether.rubeus_sapling": "宝红树苗",
+	"block.betternether.rubeus_log": "宝红原木",
+	"block.betternether.rubeus_bark": "宝红木",
+	"block.betternether.rubeus_leaves": "宝红树叶",
+	"block.betternether.rubeus_planks": "宝红木板",
+	"block.betternether.rubeus_stairs": "宝红木楼梯",
+	"block.betternether.rubeus_slab": "宝红木台阶",
+	"block.betternether.rubeus_fence": "宝红木栏杆",
+	"block.betternether.rubeus_gate": "宝红栅木拦门",
+	"block.betternether.rubeus_button": "宝红木按钮",
+	"block.betternether.rubeus_plate": "宝红木压力板",
+	"block.betternether.rubeus_trapdoor": "宝红木活板门",
+	"block.betternether.rubeus_door": "宝红木门",
+	"block.betternether.taburet_rubeus": "宝红木凳子",
+	"block.betternether.chair_rubeus": "宝红木椅子",
+	"block.betternether.bar_stool_rubeus": "宝红木吧台凳",
+	"block.betternether.rubeus_ladder": "宝红木梯子",
 	
 	"item.betternether.cincinnasite_shears": "云金剪刀",
 	"block.betternether.cincinnasite_anvil": "云金砧",
