Some translation fixes

--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -24,7 +24,7 @@
 
 	"block.betternether.stalagnate_bowl": "Stalagnate Bowl",
 	"item.betternether.stalagnate_bowl": "Stalagnate Bowl",
-	"item.betternether.stalagnate_bowl_apple": "Black Apple",
+	"item.betternether.stalagnate_bowl_apple": "Bowl with Black Apple",
 	"item.betternether.stalagnate_bowl_mushroom": "Mushroom Stew",
 	"item.betternether.stalagnate_bowl_wart": "Wart Soup",
 
