--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -22,7 +22,7 @@
 
 	"block.betternether.stalagnate_bowl": "Сталагнатовая миска",
 	"item.betternether.stalagnate_bowl": "Сталагнатовая миска",
-	"item.betternether.stalagnate_bowl_apple": "Чёрное яблоко",
+	"item.betternether.stalagnate_bowl_apple": "Mиска c чёрным яблоком",
 	"item.betternether.stalagnate_bowl_mushroom": "Грибной суп",
 	"item.betternether.stalagnate_bowl_wart": "Суп из наростов",
 
