--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -528,5 +528,13 @@
 	"config.betternether.reset": "Сбросить",
 	"config.betternether.fog": "Расстояние до тумана",
 	"config.betternether.lavafalls": "§b*§rЧастицы лавопадов",
-	"config.betternether.armour": "§b*§rТонкая броня"
+	"config.betternether.armour": "§b*§rТонкая броня",
+	
+	"block.betternether.crafting_table_stalagnate": "Сталагнатовый верстак",
+	"block.betternether.crafting_table_reed": "Тростниковый верстак",
+	"block.betternether.crafting_table_willow": "Ивовый верстак",
+	"block.betternether.crafting_table_wart": "Верстак из нароста",
+	"block.betternether.crafting_table_rubeus": "Рубейсовый верстак",
+	"block.betternether.crafting_table_mushroom": "Грибной верстак",
+	"block.betternether.crafting_table_mushroom_fir": "Верстак из грибной ели"
 }
