Ruby hammer & recipes

--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -513,6 +513,7 @@
 	"item.betternether.cincinnasite_hoe": "Cincinnasite Hoe",
 	"item.betternether.cincinnasite_hoe_diamond": "Cincinnasite-Diamond Hoe",
 	"item.betternether.nether_ruby_hoe": "Nether Ruby Hoe",
+	"item.betternether.nether_ruby_hammer": "Nether Ruby Hammer",
 	
 	"config.betternether.config": "Better Nether Config",
 	"config.betternether.mod_reload": "§b§lYou need to restart Minecraft to apply this changes!",
