--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -541,5 +541,13 @@
 	"block.betternether.crafting_table_mushroom": "Mushroom Crafting Table",
 	"block.betternether.crafting_table_mushroom_fir": "Mushroom Fir Crafting Table",
 	
-	"block.betternether.chest_stalagnate": "Stalagnate Chest"
+	"block.betternether.chest_stalagnate": "Stalagnate Chest",
+	"block.betternether.chest_reed": "Reeds Chest",
+	"block.betternether.chest_willow": "Willow Chest",
+	"block.betternether.chest_wart": "Wart Chest",
+	"block.betternether.chest_rubeus": "Rubeus Chest",
+	"block.betternether.chest_mushroom": "Mushroom Chest",
+	"block.betternether.chest_mushroom_fir": "Mushroom Fir Chest",
+	
+	"block.betternether.jungle_moss": "Jungle Moss"
 }
