--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -549,5 +549,7 @@
 	"block.betternether.chest_mushroom": "Mushroom Chest",
 	"block.betternether.chest_mushroom_fir": "Mushroom Fir Chest",
 	
-	"block.betternether.jungle_moss": "Jungle Moss"
+	"block.betternether.jungle_moss": "Jungle Moss",
+	
+	"block.betternether.feather_fern": "Feather Fern"
 }
