--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -547,5 +547,7 @@
 	"block.betternether.chest_mushroom": "Грибной сундук",
 	"block.betternether.chest_mushroom_fir": "Сундук из грибной ели",
 	
-	"block.betternether.jungle_moss": "Мох джунглей"
+	"block.betternether.jungle_moss": "Мох джунглей",
+	
+	"block.betternether.feather_fern": "Перистый папоротник"
 }
