--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -549,5 +549,13 @@
 	
 	"block.betternether.jungle_moss": "Мох джунглей",
 	
-	"block.betternether.feather_fern": "Перистый папоротник"
+	"block.betternether.feather_fern": "Перистый папоротник",
+	
+	"block.betternether.sign_stalagnate": "Сталагнатовая табличка",
+	"block.betternether.sign_reed": "Тростниковая табличка",
+	"block.betternether.sign_willow": "Ивовая табличка",
+	"block.betternether.sign_wart": "Табличка из нароста",
+	"block.betternether.sign_rubeus": "Рубейсовая табличка",
+	"block.betternether.sign_mushroom": "Грибная табличка",
+	"block.betternether.sign_mushroom_fir": "Табличка из грибной ели"
 }
