--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -557,5 +557,13 @@
 	"block.betternether.sign_wart": "Табличка из нароста",
 	"block.betternether.sign_rubeus": "Рубейсовая табличка",
 	"block.betternether.sign_mushroom": "Грибная табличка",
-	"block.betternether.sign_mushroom_fir": "Табличка из грибной ели"
+	"block.betternether.sign_mushroom_fir": "Табличка из грибной ели",
+	
+	"block.betternether.barrel_stalagnate": "Сталагнатовая бочка",
+	"block.betternether.barrel_reed": "Тростниковая бочка",
+	"block.betternether.barrel_willow": "Ивовая бочка",
+	"block.betternether.barrel_wart": "Бочка из нароста",
+	"block.betternether.barrel_rubeus": "Рубейсовая бочка",
+	"block.betternether.barrel_mushroom": "Грибная бочка",
+	"block.betternether.barrel_mushroom_fir": "бочка из грибной ели"
 }
