Chests & texture compressing

--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -554,6 +554,9 @@
 	"block.betternether.chest_mushroom": "Mushroom Chest",
 	"block.betternether.chest_mushroom_fir": "Mushroom Fir Chest",
 	
+	"block.betternether.chest_crimson": "Crimson Chest",
+	"block.betternether.chest_warped": "Warped Chest",
+	
 	"block.betternether.jungle_moss": "Jungle Moss",
 	
 	"block.betternether.feather_fern": "Feather Fern",
