More barrels, fixes

--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -577,6 +577,9 @@
 	"block.betternether.barrel_mushroom": "Mushroom Barrel",
 	"block.betternether.barrel_mushroom_fir": "Mushroom Fir Barrel",
 	
+	"block.betternether.barrel_crimson": "Crimson Barrel",
+	"block.betternether.barrel_warped": "Warped Barrel",
+	
 	"block.betternether.crimson_ladder": "Crimson Ladder",
 	"block.betternether.warped_ladder": "Warped Ladder",
 	"block.betternether.mushroom_ladder": "Mushroom Ladder",
