--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -575,6 +575,9 @@
 	"block.betternether.barrel_mushroom": "Грибная бочка",
 	"block.betternether.barrel_mushroom_fir": "бочка из грибной ели",
 	
+	"block.betternether.barrel_crimson": "Багровая бочка",
+	"block.betternether.barrel_warped": "Искажённая бочка",
+	
 	"block.betternether.crimson_ladder": "Багровая лестница",
 	"block.betternether.warped_ladder": "Искажённая лестница",
 	"block.betternether.mushroom_ladder": "Грибная лестница",
