--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -602,5 +602,7 @@
 	"block.betternether.lumabus_vine": "Lumabus Vine",
 	"item.betternether.glowstone_pile": "Glowstone Pile",
 	"block.betternether.jellyfish_mushroom": "Jellyfish Mushroom",
-	"block.betternether.jellyfish_mushroom_sapling": "Jellyfish Mushroom Sapling"
+	"block.betternether.jellyfish_mushroom_sapling": "Jellyfish Mushroom Sapling",
+	"block.betternether.bone_stalactite": "Bone Stalactite",
+	"block.betternether.cincinnasite_chain": "Cincinnasite Chain"
 }
