--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -600,5 +600,7 @@
 	"block.betternether.lumabus_vine": "Лоза люмабуса",
 	"item.betternether.glowstone_pile": "Щепотка глоустоуна",
 	"block.betternether.jellyfish_mushroom": "Медузовый гриб",
-	"block.betternether.jellyfish_mushroom_sapling": "Саженец медузового гриба"
+	"block.betternether.jellyfish_mushroom_sapling": "Саженец медузового гриба",
+	"block.betternether.bone_stalactite": "Костяной сталактит",
+	"block.betternether.cincinnasite_chain": "Цинцинназитовая цепь"
 }
