Ore improvements, nether lapis

--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -604,5 +604,7 @@
 	"block.betternether.jellyfish_mushroom": "Jellyfish Mushroom",
 	"block.betternether.jellyfish_mushroom_sapling": "Jellyfish Mushroom Sapling",
 	"block.betternether.bone_stalactite": "Bone Stalactite",
-	"block.betternether.cincinnasite_chain": "Cincinnasite Chain"
+	"block.betternether.cincinnasite_chain": "Cincinnasite Chain",
+	"block.betternether.nether_lapis_ore": "Nether Lapis Ore",
+	"item.betternether.lapis_pile": "Lapis Pile"
 }
